--- a/workshop4/dash.ipynb
+++ b/workshop4/dash.ipynb
@@ -82,7 +82,18 @@
     "- Click [![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/paga-hb/C1VI1B_2025/blob/main/workshop4/dash.ipynb)\n",
     "\n",
     "- In Google CoLab, choose `File -> Save a Copy in Drive`.\n",
+    "- Run the cell below to install Dash in Google CoLab.\n",
     "- Now you can work through the Notebook cells in Google CoLab."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5879ee0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install dash dash-bootstrap-components openpyxl lxml pycountry"
    ]
   },
   {
